testdata/parser/negative/12.pdl
#version 100

// illegal node declaration
primitive main(in a, out b) {
	while (true) {
		channel x -> y;
		synchronous {}
	}
}
